# SmallStrings

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  README.md  SmallStrings.podspec  WORKSPACE  compress  compress.m  compress.swift  localize.bzl  localize.m  localize.rb  localize.sh
Example/Localization/: BUILD
Example/Localization/en.lproj/: Localizable.strings
Example/Localization/es.lproj/: Localizable.strings
Example/Source/: App.h  App.m  AppDelegate.m  AppTest.m  BUILD  Info.plist  main.m
Example/Source/Module/: BUILD  Module.h  Module.m  ModuleTest.m
Example/Source/Module/Localization/: BUILD
Example/Source/Module/Localization/en.lproj/: Localizable.strings  Localizable.stringsdict
Example/Source/Module/Localization/es.lproj/: Localizable.strings  Localizable.stringsdict
Source/: MNSMiniStrings.h  MNSMiniStrings.m  SSTSmallStrings.h  SSTSmallStrings.m  SSTSmallStrings.swift
